# agri-ml-prediction

./: .dockerignore  .gitattributes  .gitignore  DOCUMENTATION_CI_CD.md  Dockerfile  Dockerfile.frontend  README.md  app.py  interface_gradio.py  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yaml
model_artifacts/: cat_info.json  country_to_cluster.pkl  final_model.pkl  metadata.json
notebooks/: Agriculture_EDA.ipynb  Agriculture_modelisation.ipynb
src/: feature_engineering.py  pydantic_validaton.py
tests/: conftest.py  test_api.py  test_feature_engineering.py  test_pydantic_validation.py
