[project]
name = "appli-agriculture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "gradio>=6.2.0",
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "mlflow>=3.10.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
    "yellowbrick>=1.5",
]
